<resources>
    <string name="logo">Logo</string>
    <string name="title_item_list">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="title_activity_list">Wizflow</string>
    <string name="search">Search</string>
    <string name="search_hint">Search in notes</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
    <string name="trash">Trash</string>
    <string name="trash_action">Trash</string>
    <string name="trashed">trashed</string>
    <string name="note_trashed">Note(s) trashed</string>
    <string name="note_untrashed">Note(s) restored from trash</string>
    <string name="untrash">Restore from trash</string>
    <string name="delete">Delete</string>
    <string name="note_deleted">Note(s) deleted permanently</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Restore from archive</string>
    <string name="creation">Created:</string>
    <string name="last_update">Updated:</string>
    <string name="delete_note_confirmation">Confirm note deletion?</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="note_updated">Note updated</string>
    <string name="empty_note_not_saved">Can\'t save an empty note</string>
    <string name="empty_note_not_shared">Can\'t share an empty note</string>
    <string name="note_archived">Note archived</string>
    <string name="note_unarchived">Note restored from archive</string>
    <string name="note">Note</string>
    <string name="share_message_chooser">Share with</string>
    <string name="shared_content_sign">\n【by Wizflow】</string>
    <string name="sort">Sort</string>
    <string name="select_sorting_column">Sort by</string>
    <string name="tap_to_undo">Tap to undo</string>
    <string name="alarm_set_on">Reminder set for</string>
    <string name="starting_from">starting from</string>
    <string name="at_time">at</string>
    <string name="discard_changes">Discard changes</string>
    <string name="attachment">Attachment</string>
    <string name="camera">Camera</string>
    <string name="delete_selected_image">Delete selected attachment?</string>
    <string name="delete_all_attachments">Delete all the attachments?</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="timestamp">Timestamp</string>
    <string name="pushbullet">Pushbullet</string>
    <string name="remove_location">Remove location?</string>
    <string name="remove_reminder">Remove reminder?</string>
    <string name="add_reminder">Add reminder</string>
    <string name="location_not_found">Location not found</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="no_app_to_handle_intent">No applications to handle file</string>
    <string name="storage_not_available">Storage not available</string>
    <string name="video">Video</string>
    <string name="feature_not_available_on_this_device">Feature unavailable on this device, sorry</string>
    <string name="error_occurred_deleting_note">Error while deleting note</string>
    <string name="no_backups_available">No backups available</string>
    <string name="data_export_message">Insert backup name</string>
    <string name="data_import_message">Click -&gt; restore\nLong-click -&gt; delete</string>
    <string name="data_import_message_warning">WARNING: This will replace all current data!</string>
    <string name="data_export_completed">Data backup completed</string>
    <string name="data_import_completed">Data restore completed</string>
    <string name="click_to_refresh_application">Click to refresh application</string>
    <string name="backup_existing">Backup already exist. It\'ll be overwritten</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tags</string>
    <string name="select_tags">Select tag(s)</string>
    <string name="categories">Categories</string>
    <string name="edit_tag">Edit category</string>
    <string name="add_category">Add category</string>
    <string name="category_title">Title</string>
    <string name="category_description">Description</string>
    <string name="category_color">Color</string>
    <string name="category_saved">Category saved</string>
    <string name="category_deleted">Category deleted</string>
    <string name="category_missing_title">Category title missing</string>
    <string name="delete_this_category">Delete this category</string>
    <string name="category">Category</string>
    <string name="categorize_as">Categorize as</string>
    <string name="title_activity_category">Edit category</string>
    <string name="delete_unused_category_confirmation">Confirm category deletion?</string>
    <string name="delete_category_confirmation">This category is used by some notes.\nConfirm notes un-categorization and category deletion?</string>
    <string name="discard">Discard</string>
    <string name="remove_category">Remove category</string>
    <string name="no_tags_created">No tags available yet\nCreate them by writing hashtags into your notes</string>
    <string name="no_categories_created">No categories have been created yet</string>
    <string name="notes_category_removed">Category removed from notes</string>
    <string name="notes_categorized_as">Notes categorized as</string>
    <string name="insert_security_password">Insert password</string>
    <string name="lock">Lock</string>
    <string name="save_note_to_lock_it">Save note to lock it</string>
    <string name="save_note_to_unlock_it">Save note to unlock it</string>
    <string name="unlock">Unlock</string>
    <string name="title_activity_password">Edit security password</string>
    <string name="title_activity_about">Info</string>
    <string name="deleted">deleted</string>
    <string name="no_items_in_list">Nothing here!</string>
    <string name="checklist_on">Enable checklist</string>
    <string name="checklist_off">Disable checklist</string>
    <string name="checklist_item_hint">New item</string>
    <string name="remove_checklist">Remove checklist?</string>
    <string name="checklist_keep_checked">Keep checked items</string>
    <string name="checklist_keep_symbols">Keep check marks</string>
    <string name="sketch">Sketch</string>
    <string name="stroke">Stroke</string>
    <string name="saturation">Saturation</string>
    <string name="opacity">Opacity</string>
    <string name="checklist">Checklist</string>
    <string name="text_note">Text note</string>
    <string name="photo">Photo</string>
    <string name="settings_reset_all_data">Erase all data</string>
    <string name="settings_screen_sync_import_export">Sync and Backups</string>
    <string name="settings_screen_interface">Interface</string>
    <string name="settings_screen_notifications">Notifications</string>
    <string name="settings_enable_vibration">Vibration</string>
    <string name="settings_notification_enable_boot_persistence">Enable notifications persistence</string>
    <string name="settings_notification_enable_boot_persistence_summary">Allow the app to access notifications to make they survive to reboots</string>
    <string name="settings_screen_navigation">Navigation</string>
    <string name="settings_max_video_size">Video attachments</string>
    <string name="settings_screen_data">Data</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_access">Request password on access</string>
    <string name="settings_password_instructions">Password ensures that notes won\'t be viewed or modified by other persons.\n\nWhen setting a new password, the previous one will be requested.</string>
    <string name="insert_new_password">Insert a new password</string>
    <string name="confirm_new_password">Confirm the new password</string>
    <string name="settings_backup_summary">Import or export app data</string>
    <string name="settings_max_video_size_summary">Maximum allowed size in MB</string>
    <string name="settings_password_summary">Edit security password</string>
    <string name="settings_checked_items_behavior">Checklists</string>
    <string name="settings_checked_items_behavior_summary">What to do when an item is checked?</string>
    <string name="settings_category_preferences">Preferences</string>
    <string name="settings_choose_language">Language</string>
    <string name="settings_notification_ringtone">Ringtone</string>
    <string name="settings_notification_snooze_delay">Second reminder delay</string>
    <string name="settings_simple_calendar">Simple calendar and time</string>
    <string name="settings_simple_calendar_summary">Use the (simpler) Android interface for date/time selection, instead of Google interface</string>
    <string name="settings_password_question_instructions">Insert a question and a secret answer in case you forget the password</string>
    <string name="settings_password_question">Question</string>
    <string name="settings_password_answer">Answer</string>
    <string name="settings_password_answer_check">Confirm answer</string>
    <string name="password_forgot">Password forgotten</string>
    <string name="password_remove">Remove password</string>
    <string name="colors_app">Application color scheme</string>
    <string name="settings_instant_search">Instant search</string>
    <string name="settings_navdrawer_on_exit">Navigation menu on exit</string>
    <string name="settings_navdrawer_on_exit_summary">Pressing \"back\" when in notes list opens navigation menu instead of exiting</string>
    <string name="settings_text_size">Text size</string>
    <string name="settings_screen_behaviors">Behaviors</string>
    <string name="settings_enable_swipe">Swipe notes</string>
    <string name="settings_enable_swipe_summary">Swipe on notes to perform actions</string>
    <string name="settings_swipe_to_trash">Swipe to trash</string>
    <string name="settings_show_uncategorized">Group not categorized</string>
    <string name="settings_show_uncategorized_summary">Adds a new item in navigation menu for not categorized notes</string>
    <string name="settings_show_category_count">Note count</string>
    <string name="settings_show_category_count_summary">Shows the number of associated notes next to the category</string>
    <string name="settings_auto_location">Automatic location</string>
    <string name="settings_auto_location_summary">Automatically adds location to new notes</string>
    <string name="settings_dynamic_menu">Dynamic menu</string>
    <string name="settings_dynamic_menu_summary">Unused menu items are automatically hidden</string>
    <string name="settings_fab_expansion_behavior">Floating action button</string>
    <string name="settings_fab_expansion_behavior_summary_on">Short touch performs action</string>
    <string name="settings_fab_expansion_behavior_summary_off">Short touch toggles options</string>
    <string name="settings_attachments_on_bottom">Attachments on bottom</string>
    <string name="settings_attachments_on_bottom_summary_on">Shows attachments below note content</string>
    <string name="settings_attachments_on_bottom_summary_off">Shows attachments above note content</string>
    <string name="settings_prettified_dates">Prettified dates</string>
    <string name="settings_prettified_dates_summary_on">Dates are shown in a simplier format</string>
    <string name="settings_prettified_dates_summary_off">Dates are shown in a more detailed format</string>
    <string name="settings_screen_privacy">Privacy</string>
    <string name="stroke_size">stroke size</string>
</resources>