<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">

    <ListPreference
        android:entries="@array/languages"
        android:entryValues="@array/languages_codes"
        android:key="settings_language"
        android:title="@string/settings_choose_language" />

    <developer.elkane.udacity.wizflow.FontSizeListPreference
        android:defaultValue="default"
        android:entries="@array/text_size"
        android:entryValues="@array/text_size_values"
        android:key="settings_text_size"
        android:layout="@layout/settings_font_size_item"
        android:title="@string/settings_text_size" />

    <ListPreference
        android:defaultValue="strip"
        android:entries="@array/colors_app"
        android:entryValues="@array/colors_app_values"
        android:key="settings_colors_app"
        android:title="@string/colors_app" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="settings_fab_expansion_behavior"
        android:summaryOff="@string/settings_fab_expansion_behavior_summary_off"
        android:summaryOn="@string/settings_fab_expansion_behavior_summary_on"
        android:title="@string/settings_fab_expansion_behavior" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="settings_simple_calendar"
        android:summary="@string/settings_simple_calendar_summary"
        android:title="@string/settings_simple_calendar" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="settings_attachments_on_bottom"
        android:summaryOff="@string/settings_attachments_on_bottom_summary_off"
        android:summaryOn="@string/settings_attachments_on_bottom_summary_on"
        android:title="@string/settings_attachments_on_bottom" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="settings_prettified_dates"
        android:summaryOff="@string/settings_prettified_dates_summary_off"
        android:summaryOn="@string/settings_prettified_dates_summary_on"
        android:title="@string/settings_prettified_dates" />

</PreferenceScreen>
