<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">

    <PreferenceScreen
        android:key="settings_sync_import_export"
        android:persistent="false"
        android:summary="@string/settings_backup_summary"
        android:title="@string/settings_screen_sync_import_export" />

    <Preference
        android:key="settings_password"
        android:summary="@string/settings_password_summary"
        android:title="@string/settings_password" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="settings_password_access"
        android:title="@string/settings_password_access" />

    <Preference
        android:key="reset_all_data"
        android:title="@string/settings_reset_all_data" />

</PreferenceScreen>
