<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">

    <SwitchPreference
        android:defaultValue="true"
        android:key="settings_notification_vibration"
        android:title="@string/settings_enable_vibration" />

    <RingtonePreference
        android:key="settings_notification_ringtone"
        android:ringtoneType="all"
        android:title="@string/settings_notification_ringtone" />

    <EditTextPreference
        android:defaultValue="10"
        android:inputType="number"
        android:key="settings_notification_snooze_delay"
        android:title="@string/settings_notification_snooze_delay" />

    <Preference
        android:key="settings_notification_service_listener"
        android:summary="@string/settings_notification_enable_boot_persistence_summary"
        android:title="@string/settings_notification_enable_boot_persistence">
        <intent android:action="android.settings.ACTION_NOTIFICATION_LISTENER_SETTINGS" />
    </Preference>

</PreferenceScreen>
