<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/password_forgotten"
        style="@style/Button.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|end"
        android:layout_marginTop="20dp"
        android:gravity="end|end"
        android:text="@string/password_forgot" />

    <Button
        android:id="@+id/password_remove"
        style="@style/Button.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|end"
        android:gravity="end|end"
        android:text="@string/password_remove" />

    <Button
        android:id="@+id/password_confirm"
        style="@style/Button.Dialog.Accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|end"
        android:gravity="end|end"
        android:text="@string/ok" />
</LinearLayout>
