<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@drawable/bg_card"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="Title"
        android:gravity="center_horizontal"
        android:hint="@string/category_title"
        android:inputType="textCapSentences"
        android:textAppearance="@style/Text.Big"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_lighter"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="Description"
        android:gravity="center"
        android:hint="@string/category_description"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/color_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="color chooser"
        android:src="@drawable/gray_circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete"
            style="@style/Button.Dialog.Accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="delete button"
            android:text="@string/delete"
            android:visibility="gone" />

        <Button
            android:id="@+id/save"
            style="@style/Button.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="save button"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>
